  options to offload computationally intensive tasks to any
  OpenCL-compatible GPU device.

  On systems with more than one device `--prefer-gpu' selects the
  desired GPU and `--show-gpu-info' lists the available GPUs.

- Long-time option `-a' got a long-form sibling called
  `--pre-assemble'.  The long form can be negated as
  `--no-pre-assemble', which is the default.


** Developer Stuff

- A C++11-compatible compiler is required to compile Enblend and
  Enfuse.

- Support for older versions of the Boost filesystem library has been
  dropped.

- Empty `--parameter' options default to "1".  This behavior in
  conjunction with boolean parameter expansion taking "0" and "1" as
  aliases for "false" and "true" allows to shorten setting boolean
  parameters.


** Package Maintainer Stuff

- Boost version 1.55 or later is now required to build.

- Vigra version 1.9 or later is now required to build.

- Little CMS version 2.5 or later is now required to build.

- Support for OpenGL acceleration has been dropped.  So, the
  dependencies on the libraries GL, GLU, and Glut do not exist any
  longer.

- Support for images with 8-bit signed channels has been dropped.

- The documentation no longer uses Texinfo, but LaTeX for PostScript
  generation and Hevea for HTML.


* Version 4.1  "Trouble In Paradise"

Released on December 8, 2012.

** Improvements

- All deprecated options since version 4.0 have been removed.

- A new primary seam-line generator, based on a Graph-Cut algorithm,
  has been implemented during GSoC 2011 by Mikołaj Leszczyński.  The
  old Nearest-Feature Transform remains the default.  The new
  algorithm is activated with "--primary-seam-generator=graph-cut".

- The difference image on which Enblend's seam-line optimization
  relies for color images uses a perceptual model by default (option
  "--image-difference"), yielding a true CIE76 "Delta E" with the
  (default) luminance and chrominance weights of 1.
